--- a/styles/login.css
+++ b/styles/login.css
@@ -6,19 +6,20 @@
 .wrapper {
     height: 100vh;
     display: grid;
-    place-items: center;
+    place-items: flex-start;
 
 }
 
 .typing-title {
 
-    height: 100vh;
+
     color: red;
-    font-size: 13em;
+    font-size: 10em;
     font-weight: 900;
+    margin-bottom: 1em;
 
 
-    animation: typing 2s steps(3), blink .5s step-end infinite alternate;
+    animation: typing 2s steps(3), blink-caret .5s step-end infinite alternate;
     white-space: nowrap;
     overflow: hidden;
     border-right: 3px solid;
@@ -29,14 +30,25 @@
     from {
         width: 0
     }
+
+    to {
+        width: 100%
+    }
+
 }
 
-@keyframes blink {
-    20% {
+
+@keyframes blink-caret {
+
+    from,
+    to {
         border-color: transparent
     }
-}
 
+    50% {
+        border-color: rgb(248, 11, 11);
+    }
+}
 
 
 
@@ -58,7 +70,10 @@ body {
     width: 25rem;
     height: 30rem;
     max-width: 320px;
-    position: relative;
+    position: fixed;
+    margin-top: 5em;
+
+
 }
 
 .LoginForm form {
@@ -82,6 +97,7 @@ form * {
     color: #ffffff;
     letter-spacing: 0.5px;
     font-family: "Poppins", sans-serif;
+
 }
 
 .title {
