--- a/styles/profile.css
+++ b/styles/profile.css
@@ -26,7 +26,47 @@ h2 {
     margin-top: 0.1em;
 }
 
+.image-box .btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: rgb(219, 219, 219);
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
 
+}
+
+
+.image-box .btn:hover {
+    background-color: red;
+
+}
+
+.btn {
+
+    position: absolute;
+    top: 10%;
+    left: 80%;
+
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: rgb(255, 0, 0);
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+
+}
 
 
 .container {
