--- a/styles/boekentips.css
+++ b/styles/boekentips.css
@@ -1,345 +1,354 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
-
-@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
-
-:root {
-    --body-bg-color: #e5f4f9;
-    --body-color-light: #8b939c;
-    --body-font: "Roboto", sans-serif;
-    --page-bg-color: #f2f5f7;
-    --body-color: #3d4954;
-    --border-color: #b8bec3;
-    --placeholder: #ccd0d2;
-}
-
-* {
-    outline: none;
-    box-sizing: border-box;
-}
-
-img {
-    max-width: 100%;
-}
-
-html {
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-}
-
-body {
-    background-color: #fff;
-    font-family: var(--body-font);
-    color: var(--body-color);
-    font-weight: 400;
-    margin: 0;
-    display: flex;
-    align-items: center;
-
-}
-
-
-
-.Oba-bieb {
-    display: flex;
-    flex-direction: column;
-    max-width: 1400px;
-    height: 100vh;
-    background-color: var(--page-bg-color);
-    margin: 0 auto;
-    overflow: hidden;
-    box-shadow: 0px 2px 50px 10px rgba(0, 0, 0, 0.21);
-}
-
-.header {
-    display: flex;
-    height: 70px;
-    width: 100%;
-    background-color: #ffffff;
-    padding: 0 30px;
-    font-size: 14px;
-    font-weight: 500;
-    color: var(--body-color-light);
-    justify-content: space-between;
-    flex-shrink: 0;
-}
-
-.search-bar {
-    position: relative;
-}
-
-input {
-    height: 100%;
-    width: 100%;
-    display: block;
-    background-color: transparent;
-    border: none;
-    font-weight: 600;
-    padding: 0 10px 0 40px;
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none' stroke='%238b939c' stroke-width='3' stroke-linecap='round' stroke-linejoin='round' class='feather feather-search'%3e%3ccircle cx='11' cy='11' r='8'/%3e%3cpath d='M21 21l-4.35-4.35'/%3e%3c/svg%3e");
-    background-repeat: no-repeat;
-    background-size: 15px;
-    background-position: 15px 50%;
-    color: var(--body-color);
-    font-family: var(--body-font);
-}
-
-
-.search-bar::placeholder {
-    color: var(--placeholder);
-}
-
-
-
-.browse {
-    display: flex;
-}
-
-.browse-categorie {
-    display: flex;
-    border-right: 1px solid var(--border-color);
-    white-space: nowrap;
-}
-
-
-
-.browse svg {
-    width: 16px;
-    margin: 2px 10px 0 8px;
-}
+ * {
+     margin: 0;
+     padding: 0;
+     box-sizing: border-box;
+ }
 
 
 
-.header-title {
-    font-size: 16px;
-    font-weight: 400;
-    margin-right: 120px;
-}
 
-.header-title span {
-    font-weight: 500;
-    color: var(--body-color);
-}
+ body {
 
+     background-color: #EFEFEF;
+     font-family: avenir;
+     font-weight: bold;
+ }
 
-.boek-img {
-    width: 28px;
-    height: 28px;
-    border-radius: 50%;
-    margin-right: 15px;
-}
 
-.mijn-oba {
-    position: relative;
-    cursor: pointer;
-    flex-shrink: 0;
-}
 
 
-.mijn-oba:before {
-    content: "";
-    position: absolute;
-    background-color: #f86d72;
-    width: 7px;
-    height: 7px;
-    border-radius: 50%;
-    border: 2px solid var(--theme-bg-color);
-    right: 12px;
-    top: -3px;
-    border: 2px solid #fff;
-}
+ h1 {
+     color: rgb(255, 0, 0);
+     font-size: 5em;
+     font-weight: 900;
+     margin-top: 0.5em;
+     font-family: avenir;
+     font-weight: bold;
+     text-align: center;
+ }
 
+ h3 {
+     color: rgb(129, 129, 129);
+     font-size: 2em;
+     font-weight: 900;
+     margin-top: 0.5em;
+     text-align: center;
+     font-family: arial;
+     font-weight: bold;
 
-.profiel {
-    display: flex;
-    flex-shrink: 0;
-}
+ }
 
-.profiel-menu {
-    display: flex;
-    border-left: 1px solid var(--border-color);
-}
 
-svg {
-    width: 16px;
-    margin: 0 8px 0 15px;
-    flex-shrink: 0;
-}
 
+ nav ul li {
+     list-style: none;
+     display: flex;
 
-.boek-slide {
-    width: 100%;
-}
+     align-items: center;
+     flex-direction: column;
+     justify-content: space-between;
 
-.boek {
-    background: #fff;
-}
+ }
 
-.boek-cell {
-    position: relative;
-    display: flex;
-    padding: 25px;
-    width: 40%;
-    height: 250px;
-    margin-right: 1px;
-}
 
-.boek-cell:nth-child(1) {
-    background-color: red;
-}
+ nav ul li a {
+     color: black;
+     text-decoration: none;
+     font-weight: 900;
 
-.boek-cell:nth-child(2) {
-    background-color: red;
-}
+     font-family: arial;
+     font-weight: bold;
 
-.boek-cell:nth-child(3) {
-    background-color: red;
-}
+ }
 
-.boek-cell:nth-child(4) {
-    background-color: red;
-}
+ h4 {
+     color: rgb(129, 129, 129);
+     font-size: 2em;
+     font-weight: 900;
+     width: 100%;
 
-.boek-cell:nth-child(5) {
-    background-color: red;
-}
 
+     text-align: center;
 
+ }
 
 
+ /*zoekbalk*/
+ .search-box input {
+     position: absolute;
+     height: 100%;
+     width: 100%;
+     outline: none;
+     border: none;
+     background-color: #e1e4e6;
+     padding: 0 15px 0 45px;
+     color: #fff;
+     border-radius: 6px;
+ }
 
+ .search-box i {
+     position: absolute;
+     z-index: 2;
+     color: #999;
+     top: 50%;
+     left: 15px;
+     font-size: 40px;
+     transform: translateY(-50%);
+ }
 
-/*slide */
 
-.flickity-page-dots {
-    display: none;
-}
+ .search-box {
+     position: relative;
+     height: 42px;
+     max-width: 800px;
+     margin: 0 auto;
+     margin-bottom: 20px;
+ }
 
-.flickity-prev-next-button .arrow {
-    fill: #d6d6d6;
-}
 
-.flickity-prev-next-button svg {
-    left: 25%;
-    top: 25%;
-    width: 50%;
-    height: 50%;
-}
 
-.flickity-prev-next-button.previous {
 
-    left: 15px;
-}
 
 
-.flickity-prev-next-button.next {
-    right: 15px;
-}
+ .slide-container .images .image-box {
+     position: relative;
+     height: 40px;
+     width: 200px;
+     border-radius: 6px;
+     overflow: hidden;
+ }
 
 
-.flickity-viewport {
-    overflow: visible;
-}
 
-/*slide over */
 
-.boek-foto {
-    width: 180px;
-    flex-shrink: 0;
-    bottom: -35px;
-    left: 35px;
-    border-radius: 2px;
-    box-shadow: -2px 6px 19px 0px #7f818e;
-    transition: .3s ease;
-}
 
-.boek-foto:hover {
-    transform: scale(1.03);
-}
+ .slide-container {
+     display: flex;
 
+     width: 100%;
+     height: 20%;
 
-.boek-img {
-    flex-shrink: 0;
-}
 
-.boek-title {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-}
 
-.boek-title {
-    color: #ffffff;
-    font-weight: 600;
-}
 
-.boek-author {
-    margin-top: 3px;
-    font-size: 14px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-}
+ }
 
-.boek-content {
-    padding: 0 20px;
-    color: #ffffff;
-    overflow: hidden;
-}
+ .card-wrapper {
+     display: flex;
+     overflow-x: scroll;
+     color: rgb(255, 0, 0);
+     box-sizing: border-box;
+     scroll-snap-align: start;
 
+ }
 
+ .slide-content {
 
-h1 {
-    font-size: 0.5em;
-    margin: 10px;
-}
+     overflow: hidden;
+     border-radius: 25px;
+     padding: 20px;
 
+ }
 
 
 
+ .slide-container>div {
+     font-size: 30px;
+     align-items: center;
 
-.boek-sum {
-    margin-top: 20px;
-    font-size: 14px;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-}
+ }
 
-.zie-boek {
-    margin-top: 25px;
-    text-align: center;
-    background-color: #fff;
-    color: #fbadaf;
-    font-weight: 600;
-    padding: 8px;
-    font-size: 14px;
-    width: 160px;
-    border-radius: 20px;
-}
 
-.zie-boek:hover {
-    color: #ff6e72;
-}
+ .card {
+     border-radius: 25px;
+     background-color: #FFF;
+     margin-left: 2em;
+     margin-top: 10rem;
+     width: 320px;
 
 
 
 
+ }
 
 
-.main-wrapper {
-    width: 100%;
-    display: flex;
-    flex-grow: 1;
-    margin-top: 100px;
-    overflow: hidden;
-}
 
-.books-of {
-    width: 320px;
-    display: flex;
-    flex-direction: column;
-    overflow-y: auto;
-    overflow-x: hidden;
-    flex-shrink: 0;
-}
+
+
+
+
+ .card>div:nth-child(2n) {
+     background-color: #fff;
+     color: #ffffff;
+ }
+
+
+ .card>div:nth-child(2) {
+     scroll-margin-inline-start: 2rem;
+ }
+
+
+ .card>div:nth-child(3) {
+     scroll-margin-inline-start: 5rem;
+ }
+
+
+ .card>div:nth-child(4) {
+     scroll-margin-inline-start: 2rem;
+ }
+
+ .card>div:nth-child(5) {
+     scroll-margin-inline-start: 2rem;
+ }
+
+
+ .card>div:nth-child(6) {
+     scroll-margin-inline-start: 2rem;
+ }
+
+ .card>div:nth-child(7) {
+     scroll-margin-inline-start: 2rem;
+ }
+
+
+
+
+ .image-content,
+ .card-content {
+
+     flex-direction: column;
+     align-items: center;
+     padding: 10px 10px;
+     display: flex;
+ }
+
+ .image-content {
+     position: relative;
+     row-gap: 5px;
+     padding: 25px 0;
+ }
+
+ .overlay {
+     position: absolute;
+     left: 0;
+     top: 0;
+     height: 100%;
+     width: 100%;
+     background-color: rgb(233, 233, 233);
+     border-radius: 25px 25px 0 25px;
+ }
+
+ .overlay::before,
+ .overlay::after {
+     content: '';
+     position: absolute;
+     right: 0;
+     bottom: -40px;
+     height: 40px;
+     width: 40px;
+     background-color: rgb(255, 255, 255)
+ }
+
+ .overlay::after {
+     border-radius: 0 25px 0 0;
+     background-color: #FFF;
+ }
+
+ .card-image {
+     position: relative;
+     height: 300px;
+     width: 200px;
+
+     background: rgb(219, 155, 155);
+     padding: 3px;
+ }
+
+ .card-image .card-img {
+     height: 100%;
+     width: 100%;
+
+
+ }
+
+ .name {
+     font-size: 18px;
+     font-weight: 500;
+     color: #333;
+     font-weight: 900;
+ }
+
+ .description {
+     font-size: 16px;
+     color: #383737;
+     text-align: left;
+     max-width: 30rem;
+
+ }
+
+ .button {
+     border: none;
+     font-size: 16px;
+     color: #FFF;
+     padding: 8px 16px;
+     background-color: rgb(255, 7, 7);
+     border-radius: 6px;
+     margin: 14px;
+
+     cursor: pointer;
+
+ }
+
+
+ .btn-uitlog {
+     border: none;
+     font-size: 16px;
+     color: #FFF;
+     padding: 8px 16px;
+     background-color: rgb(255, 7, 7);
+     border-radius: 6px;
+     margin: 5px;
+     cursor: pointer;
+     float: right;
+
+ }
+
+ .button:hover {
+     background: grey;
+ }
+
+ .btns {
+     position: absolute;
+     width: 100px;
+     height: 60px;
+     top: 90%;
+
+     text-align: center;
+     cursor: pointer;
+     background: rgba(0, 0, 0, 0.1);
+     z-index: 999;
+     overflow: hidden;
+
+
+
+ }
+
+ .btns:hover {
+     background: rgba(0, 0, 0, 0.3);
+ }
+
+ #next {
+     right: -50px;
+     border-radius: 7px 0px 0px 7px;
+ }
+
+ #previous {
+     left: -50px;
+     border-radius: 0px 7px 7px 7px;
+ }
+
+ #counter {
+     top: 30px;
+     right: 35px;
+     width: auto;
+     position: absolute;
+ }
