--- a/styles/boekentips.css
+++ b/styles/boekentips.css
@@ -89,12 +89,12 @@
 
 
  .logo-img {
-     max-width: 40vh;
+     max-width: 25vh;
      align-items: center;
      position: relative;
 
 
-     left: 40%;
+     left: 30%;
 
 
 
@@ -482,16 +482,18 @@
      padding: 8px 16px;
      background-color: #F44336;
      border-radius: 6px;
-     margin: 5px;
+     margin: 1em;
      cursor: pointer;
      float: right;
+
+
 
  }
 
 
- .btn {
+ .btn-reservering {
 
-     position: absolute;
+     position: relative;
 
      font-family: avenir_lt_std95_black;
 
@@ -503,8 +505,11 @@
      border: none;
      cursor: pointer;
      border-radius: 5px;
-     margin: 5px;
+     margin: 1em;
+     left: 1em;
      float: right;
+
+     ;
 
  }
 
@@ -682,25 +687,7 @@
      margin: 0.3em 0;
  }
 
- @media (max-width: 550px) {
-     .small-50 {
-         width: 50%;
-     }
 
-     .footer-col:nth-child(2) {
-         border: none;
-     }
- }
-
- @media (max-width: 300px) {
-     .tiny-100 {
-         width: 100%;
-     }
-
-     .footer-col {
-         border: none;
-     }
- }
 
  /*end footer*/
 
@@ -709,30 +696,132 @@
  /* media queries*/
 
  /*mobile*/
- @media (min-width:320px) and (max-width:480px) {
+ @media screen and (max-width:400px) {
 
-     nav>ul>li>a {
-         width: 100px;
+     body {
+         width: 57%;
+     }
+
+
+
+     nav ul li {
+         flex-direction: column;
+         padding: 0;
+         margin: 10px 0;
+         text-align: center;
+
 
      }
 
- }
 
- /*tablet*/
- @media (min-width: 481px) and (max-width:768px) {
-     nav>ul>li>a {
-         width: 100px;
 
+
+     .container {
+         width: 40%;
      }
 
- }
-
-
- /*desktop*/
- @media (min-width: 769px) and (max-width:1023px) {
-     nav>ul>li>a {
-         width: 100px;
-
+     .logo-img {
+         width: 50%;
      }
 
- }
+
+     .btn-uitlog,
+     .btn-reservering {
+         flex-direction: column;
+         width: 20px;
+     }
+
+     .carousel {
+         width: 50%;
+     }
+
+     .card-wrapper {
+         width: 50%;
+     }
+
+     .flex-container {
+         width: 50%;
+     }
+
+
+
+     .footer-content-wrapper {
+         background-color: black;
+         color: white;
+         width: 98%;
+         text-align: center;
+     }
+
+
+
+     /*tablet*/
+     @media screen and (max-width:768px) {
+
+         body {
+             width: 20px;
+         }
+
+         nav {
+             margin: 0;
+             padding: 0;
+         }
+
+         nav ul li {
+
+             flex-direction: column;
+             padding: 0;
+             margin: 10px 0;
+
+
+
+         }
+
+
+
+         .container {
+             width: 20%
+         }
+
+         .logo-img {
+             width: 20px;
+
+         }
+
+         .btn-uitlog,
+         .btn-reservering {
+             flex-direction: column;
+         }
+
+         .footer-content-wrapper {
+             width: 48%;
+             text-align: center;
+         }
+     }
+
+
+     /*desktop*/
+     @media screen and (max-width:1024px) {
+         body {
+             width: 100px;
+         }
+
+         h1,
+         h2,
+         h3 {
+             width: 100px;
+
+
+         }
+
+         .container {
+             width: 100px;
+         }
+
+         ul li {
+
+             width: 20px;
+             flex-direction: column;
+
+         }
+
+     }
