--- a/styles/new.css
+++ b/styles/new.css
@@ -238,7 +238,7 @@ h1 {
 
 
 
-/* slider carousel*/
+/* carousel-container*/
 
 
 .box1 {
@@ -290,7 +290,7 @@ h1 {
     background-position: center center;
 }
 
-.slider [class*="box"] {
+.carousel [class*="box"] {
     /*   float: left; */
     overflow: hidden;
     border-radius: 20px;
@@ -298,8 +298,8 @@ h1 {
     position: absolute;
 }
 
-.slider [class*="box"]:nth-child(7),
-.slider [class*="box"]:nth-child(1) {
+.carousel [class*="box"]:nth-child(7),
+.carousel [class*="box"]:nth-child(1) {
     width: 100vh;
     height: 60vh;
     transform: scale(0.2) translate(-50%, -50%);
@@ -307,8 +307,8 @@ h1 {
     z-index: 1;
 }
 
-.slider [class*="box"]:nth-child(2),
-.slider [class*="box"]:nth-child(6) {
+.carousel [class*="box"]:nth-child(2),
+.carousel [class*="box"]:nth-child(6) {
     width: 100vh;
     height: 60vh;
     transform: scale(0.4) translate(-50%, -50%);
@@ -316,8 +316,8 @@ h1 {
     z-index: 2;
 }
 
-.slider [class*="box"]:nth-child(3),
-.slider [class*="box"]:nth-child(5) {
+.carousel[class*="box"]:nth-child(3),
+.carousel[class*="box"]:nth-child(5) {
     width: 100vh;
     height: 60vh;
     transform: scale(0.6) translate(-50%, -50%);
@@ -325,7 +325,7 @@ h1 {
     z-index: 3;
 }
 
-.slider [class*="box"]:nth-child(4) {
+.carousel [class*="box"]:nth-child(4) {
     width: 60vw;
     height: 60vh;
     border-color: #c92026;
@@ -335,35 +335,35 @@ h1 {
     z-index: 4;
 }
 
-.slider [class*="box"]:nth-child(1) {
+.carousel[class*="box"]:nth-child(1) {
     left: -13%;
 }
 
-.slider [class*="box"]:nth-child(2) {
+.carousel [class*="box"]:nth-child(2) {
     left: -5%;
 }
 
-.slider [class*="box"]:nth-child(3) {
+.carousel [class*="box"]:nth-child(3) {
     left: 10%;
 }
 
-.slider [class*="box"]:nth-child(4) {
+.carousel [class*="box"]:nth-child(4) {
     left: 50%;
 }
 
-.slider [class*="box"]:nth-child(5) {
+.carousel [class*="box"]:nth-child(5) {
     left: 71%;
 }
 
-.slider [class*="box"]:nth-child(6) {
+.carousel [class*="box"]:nth-child(6) {
     left: 85%;
 }
 
-.slider [class*="box"]:nth-child(7) {
+.carousel [class*="box"]:nth-child(7) {
     left: 100%;
 }
 
-.slider .firstSlide {
+.carousel .firstSlide {
     -webkit-animation: firstChild 1s;
     animation: firstChild 1s;
 }
@@ -430,4 +430,8 @@ h1 {
         flex-direction: column;
 
     }
+
+    .carousel {}
+
+    .
 }
